--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/carolinapc/bamazon#readme",
   "dependencies": {
+    "console.table": "^0.10.0",
     "dotenv": "^8.0.0",
     "inquirer": "^6.5.0",
     "mysql": "^2.17.1"
