added the .env on the .gitignore

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=your_db_server
+DB_HOST=localhost
 DB_PORT=3306
-DB_USER=your_user
-DB_PWD=your_password
-DB_DATABASE=your_db_name
+DB_USER=root
+DB_PWD=liberdade0
+DB_DATABASE=bamazon
